fix set pagination invisible when select pet page is all

--- a/frontend/src/components/DreamsContainer/DreamsContainer.scss
+++ b/frontend/src/components/DreamsContainer/DreamsContainer.scss
@@ -12,6 +12,7 @@
     width: 100%;
     display: flex;
     justify-content: center;
+    height: 32px;
   }
 
   &__select {
